os::close can restart ::close but that is not a restartable syscall

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs25
    • Affects Version/s: 8
    • Component/s: hotspot
    • b38
    • generic
    • generic

        6468603 is a suspected bug in an early build of Solaris 11 where a close periodically fails with -1/EINTR although the thread is not interrupted.

        As part of this it was observed that os::close restarts close if it is interrupted. If close fails with EINTR then file descriptor is invalid and so the close should never be restarted. In theory the file descriptor could be recycled in a busy system and close might actually close a newly created file descriptor.

              Assignee:
              Ron Durbin (Inactive)
              Reporter:
              Alan Bateman
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: