7178026: os::close can restart ::close but that is not a restartable syscall

Removed restart macros from all os:close calls on Solaris, Linux, MacOS X platforms.

Reviewed-by: dcubed, dholmes